src/objects/Material_Forms__c.object
<CustomObject>
    <description>This object is used to store blank forms for Material Request UI.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Title__c</fullName>
        <label>Document Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_URL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FulfillmentType_Description__c</fullName>
        <label>FulfillmentType Description</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FulfillmentType__c</fullName>
        <label>FulfillmentType</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRE__c</fullName>
        <description>Unique identifier for documents</description>
        <label>MRE#</label>
        <length>228</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Request_Source_ID__c</fullName>
        <label>Original Request Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Material Forms</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Materials Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>